feat(tableDesign): table module add widget & btn cfg (80%)

--- a/index.html
+++ b/index.html
@@ -37,17 +37,17 @@
   <body>
     <div class="pre-loading">
       <div class="grid">
-        <div class="circle el">g</div>
-        <div class="circle el">a</div>
-        <div class="circle el">i</div>
+        <div class="circle el">q</div>
         <div class="circle el">u</div>
-        <div class="circle el">s</div>
-        <div class="circle el">-</div>
-        <div class="circle el">a</div>
-        <div class="circle el">d</div>
-        <div class="circle el">m</div>
         <div class="circle el">i</div>
-        <div class="circle el">n</div>
+        <div class="circle el">c</div>
+        <div class="circle el">k</div>
+        <div class="circle el">-</div>
+        <div class="circle el">b</div>
+        <div class="circle el">u</div>
+        <div class="circle el">i</div>
+        <div class="circle el">l</div>
+        <div class="circle el">d</div>
       </div>
     </div>
     <div id="app"></div>
