feat(Components): update QBIframe and QBImage default props

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         font-size: 18px;
       }
     </style>
-    <script type="module" crossorigin src="/assets/main-B5NllPLP.js"></script>
+    <script type="module" crossorigin src="/assets/main-ofbBpIGf.js"></script>
     <link rel="modulepreload" crossorigin href="/assets/modulepreload-polyfill-B5Qt9EMX.js">
     <link rel="modulepreload" crossorigin href="/assets/.pnpm-Df0qOu1O.js">
     <link rel="stylesheet" crossorigin href="/assets/.pnpm-Cg0B5H85.css">
