feat(Components): refactor style prop to styleConfig in common components; update component schemas

--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
         font-size: 18px;
       }
     </style>
-    <script type="module" crossorigin src="/assets/main-ofbBpIGf.js"></script>
+    <script type="module" crossorigin src="/assets/main-DXyLl-o1.js"></script>
     <link rel="modulepreload" crossorigin href="/assets/modulepreload-polyfill-B5Qt9EMX.js">
-    <link rel="modulepreload" crossorigin href="/assets/.pnpm-Df0qOu1O.js">
+    <link rel="modulepreload" crossorigin href="/assets/.pnpm-Car4yYfv.js">
     <link rel="stylesheet" crossorigin href="/assets/.pnpm-Cg0B5H85.css">
     <link rel="stylesheet" crossorigin href="/assets/main-DAZVW5DX.css">
   </head>
