--- a/standalone/standalone.html
+++ b/standalone/standalone.html
@@ -5,13 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Standalone Page</title>
-  <script type="module" crossorigin src="/assets/standalone-CACUToQY.js"></script>
+  <script type="module" crossorigin src="/assets/standalone-COHF38wg.js"></script>
   <link rel="modulepreload" crossorigin href="/assets/modulepreload-polyfill-B5Qt9EMX.js">
-  <link rel="modulepreload" crossorigin href="/assets/.pnpm-Df0qOu1O.js">
-  <link rel="modulepreload" crossorigin href="/assets/dgDesign-BQmDQeEM.js">
+  <link rel="modulepreload" crossorigin href="/assets/.pnpm-Car4yYfv.js">
+  <link rel="modulepreload" crossorigin href="/assets/dgDesign-Bh5mvrzb.js">
   <link rel="modulepreload" crossorigin href="/assets/_plugin-vue_export-helper-DlAUqK2U.js">
   <link rel="stylesheet" crossorigin href="/assets/.pnpm-Cg0B5H85.css">
-  <link rel="stylesheet" crossorigin href="/assets/standalone-Ce1FmX40.css">
+  <link rel="stylesheet" crossorigin href="/assets/standalone-DZzsdp6k.css">
 </head>
 
 <body>
