--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         font-size: 18px;
       }
     </style>
-    <script type="module" crossorigin src="/assets/main-CedeBi-P.js"></script>
+    <script type="module" crossorigin src="/assets/main-DeI4_O8H.js"></script>
     <link rel="modulepreload" crossorigin href="/assets/iconfont-RswF9Ywb.js">
     <link rel="modulepreload" crossorigin href="/assets/.pnpm-BfHkGPSW.js">
     <link rel="stylesheet" crossorigin href="/assets/iconfont-DAZVW5DX.css">
