fix(route): change dashboard-list route info

--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
         font-size: 18px;
       }
     </style>
-    <script type="module" crossorigin src="/assets/main-Od3PMYUl.js"></script>
+    <script type="module" crossorigin src="/assets/main-DyLxiYLR.js"></script>
     <link rel="modulepreload" crossorigin href="/assets/.pnpm-CfU0UuIO.js">
-    <link rel="modulepreload" crossorigin href="/assets/iconfont-DbxD-LdR.js">
-    <link rel="modulepreload" crossorigin href="/assets/user-BmxYGPFj.js">
-    <link rel="modulepreload" crossorigin href="/assets/system-C7UJFQXe.js">
+    <link rel="modulepreload" crossorigin href="/assets/iconfont-BqmojAhN.js">
+    <link rel="modulepreload" crossorigin href="/assets/user-Lsjc9SK4.js">
+    <link rel="modulepreload" crossorigin href="/assets/system-C8gNVs1t.js">
     <link rel="modulepreload" crossorigin href="/assets/tools-BCD5ohFr.js">
     <link rel="stylesheet" crossorigin href="/assets/iconfont-DAZVW5DX.css">
     <link rel="stylesheet" crossorigin href="/assets/.pnpm-BVyVCwmS.css">
