--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         font-size: 18px;
       }
     </style>
-    <script type="module" crossorigin src="/assets/main-BCN8moWb.js"></script>
+    <script type="module" crossorigin src="/assets/main-Ch5DcOKu.js"></script>
     <link rel="modulepreload" crossorigin href="/assets/nodemodule-@vue_shared@3.4.21-Ctf17_ps.js">
     <link rel="modulepreload" crossorigin href="/assets/nodemodule-@vue_reactivity@3.4.21-DbkE7Gi6.js">
     <link rel="modulepreload" crossorigin href="/assets/nodemodule-@vue_runtime-core@3.4.21-Cnn673wu.js">
